# uggo-new

crates/lol-client/: Cargo.toml
crates/lol-client/src/: lcc.rs  lib.rs
crates/ugg-api/: Cargo.toml
crates/ugg-api/src/: lib.rs
crates/uggo/: Cargo.toml
crates/uggo/src/: context.rs  main.rs
