[package]
name = "uggo-ugg-api"
version = "0.6.2" # Bump version
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "uggo dependency -- API client for u.gg"
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["uggo"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
ddragon = { version = "0.9.2", features = ["cdragon"] }
hex = "0.4.3"
levenshtein = "1.0.5"
lru = "0.16.0"
# native-tls = "0.2.14" -> Removed
serde = "1.0.218"
simd-json = { version = "0.17.0", default-features = false, features = [
    "serde_impl",
    "swar-number-parsing",
] }
sha2 = "0.10.8"
thiserror = "2.0.11"
# ureq -> Removed
# Added reqwest
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
ugg-types = { version = "0.9.0", path = "../ugg-types" }

[features]
json-runtime-detection = ["simd-json/runtime-detection"]
default = ["json-runtime-detection"]
