[package]
name = "uggo-ugg-api"
version = "0.6.2" # Bump version
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "uggo dependency -- Interface to retrieve data from u.gg"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.96"
# ureq = ... -> XÓA DÒNG NÀY
# Thay thế bằng reqwest
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
ugg-types = { version = "0.9.0", path = "../ugg-types" }
fake = "3.0.1" # Giữ nguyên để fake user-agent nếu cần

[features]
json-runtime-detection = [] 
default = ["json-runtime-detection"]
