[package]
name = "uggo"
version = "0.17.0"
edition = "2024"
# ... giữ nguyên phần metadata ...

[lints]
workspace = true

[dependencies]
anyhow = "1.0.96"
ddragon = "0.9.2"
log = "0.4.26"
mimalloc = "0.1.43"
ratatui = "0.29.0"
serde = "1.0.218"
tui-input = "0.14.0"
tui-logger = "0.17.0"
# Thêm Tokio Runtime
tokio = { version = "1.36", features = ["full"] }

ugg-types = { version = "0.9.0", path = "../ugg-types" }
uggo-config = { version = "0.4.0", path = "../config" }
uggo-lol-client = { version = "0.5.1", path = "../lol-client" }
uggo-ugg-api = { version = "0.6.1", path = "../ugg-api", default-features = false }

[features]
json-runtime-detection = ["uggo-ugg-api/json-runtime-detection"]
default = ["json-runtime-detection"]